--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "bugs": {
     "url": "https://github.com/strapi/strapi/issues"
   },
+  "version": "4.12.1",
   "repository": {
     "type": "git",
     "url": "git://github.com/strapi/strapi.git"
